--- a/templates/admin/auth_form.html.twig
+++ b/templates/admin/auth_form.html.twig
@@ -23,7 +23,7 @@
         </div>
     {% endif %}
 
-    <form method="POST" onsubmit="javascript:form_disabler(this)">
+    <form class="disable-on-submit confirm-on-leave" method="POST">
         <div class="ui form">
             <div class="ui required field basic segment">
                 <label class="ui top attached large label">Driver Class</label>
