--- a/templates/attachment_form.html.twig
+++ b/templates/attachment_form.html.twig
@@ -20,7 +20,7 @@
         </div>
     {% endif %}
 
-    <form method="POST" enctype="multipart/form-data" onsubmit="javascript:form_disabler(this)">
+    <form class="disable-on-submit confirm-on-leave" method="POST" enctype="multipart/form-data">
         <div class="ui form">
             <div class="ui required field basic segment">
                 <label class="ui top attached large label">Upload File</label>
