--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
         <script src="{{nav.basePath}}/ui/jquery/jquery-2.1.3.min.js"></script>
         <script src="{{nav.basePath}}/ui/jquery/jquery.address.js"></script>
         <script src="{{nav.basePath}}/ui/jquery/jquery.stickytableheaders.js"></script>
+        <script src="{{nav.basePath}}/ui/jquery/jquery.dirty.js"></script>
         <script src="{{nav.basePath}}/ui/semantic2/semantic.js"></script>
         <script src="{{nav.basePath}}/ui/semantic2/library/jquery.tablesort.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
@@ -201,14 +202,37 @@
 
                 mermaid.initialize({startOnLoad: false});
                 markdownParseMermaid('body');
+
+                // activate the confirmation on leave if the form is dirty
+                $('form.confirm-on-leave').each(() => {
+                    var el = $(this);
+                    // since jquery.dirty relies on the id attribute, set one of not set
+                    if (el.attr('id') === undefined) {
+                        el.attr('id', 'form' + Math.floor(10000 + Math.random() * 100000));
+                    }
+                    // activate jquery.dirty
+                    el.dirty({
+                        preventLeaving: true
+                    });
+                    // if there are multiple forms on a page, set all clean
+                    el.on("submit", () => {
+                        $('form.confirm-on-leave').dirty("setAsClean");
+                    });
+                });
+                // disable form fields/buttons on submit
+                $('form.disable-on-submit').on("submit", (evt) => {
+                    setTimeout(() => {
+                        $('button,input,textarea').attr('disabled', 'disabled');
+                        $('a[class*=button]').addClass('disabled');
+                    }, 100);
+                });
             });
 
             function form_disabler(form) {
                 setTimeout(() => {
                     $('button,input').attr('disabled', 'disabled');
                     $('a[class*=button]').addClass('disabled');
-                }, 0);
-                $(form).submit(() => event.preventDefault());
+                }, 100);
             }
 
             function showToast(message, title, iserror) {
@@ -271,6 +295,11 @@
                 top: -60px;
             }
 
+            .right-buttons {
+                margin-bottom: 5px;
+                float:right;
+            }
+
             #scrollToTop {
                 display:none;
                 position: fixed;
@@ -292,6 +321,7 @@
                 animation-iteration-count: infinite;
                 animation-timing-function: steps(2, start);
             }
+
             @keyframes blink {
                 80% {
                     visibility: hidden;
@@ -394,7 +424,7 @@
             {% endblock %}
 
             {% if block('footer')|trim is not empty %}
-                <div class="ui basic segment" style="height: 100px; width:100%; position: absolute; bottom: 0; left: 0; clear:both">
+                <div class="ui basic segment" style="width:100%; position: absolute; bottom: 0; left: 0; clear:both">
                     <div class="ui divider"></div>
                     <a name="bottom"></a>
                     {% block footer %}
