--- a/templates/checklist_form.html.twig
+++ b/templates/checklist_form.html.twig
@@ -19,7 +19,7 @@
     {% endif %}
 
     {% set templates = checklist.deployment.getChecklistTemplates() %}
-    <form method="POST" onsubmit="javascript:form_disabler(this)">
+    <form class="disable-on-submit confirm-on-leave" method="POST">
         <div class="ui form">
             <div class="ui required field basic segment">
                 <label class="ui top attached large label">Title</label>
