--- a/templates/project_users.html.twig
+++ b/templates/project_users.html.twig
@@ -9,7 +9,7 @@
         <div class="ui divider" style="clear: both"></div>
     </h1>
 
-    <form method="POST" onsubmit="javascript:form_disabler(this)">
+    <form class="disable-on-submit confirm-on-leave" method="POST">
         <div class="ui form">
             <table class="ui celled structured table">
                 <thead>
