--- a/templates/security/register_form.html.twig
+++ b/templates/security/register_form.html.twig
@@ -18,7 +18,7 @@
         </div>
     {% endif %}
 
-    <form method="POST" onsubmit="javascript:form_disabler(this)">
+    <form class="disable-on-submit confirm-on-leave" method="POST">
         <div class="ui form">
             {%  if auth is not defined %}
                 <div class="ui required field basic segment">
