--- a/templates/whatsnew.html.twig
+++ b/templates/whatsnew.html.twig
@@ -8,6 +8,12 @@
 
 # What's New
 
+## 3.1.8
+
+- Confirmation prompt will pop up upon leaving forms that have been modified
+- Password reset link now only resets the password when the user login using a new password (previously the password was already reset upon accessing the link)
+- Improved the "Login Provider" tab in the profile page to have actions on existing user authentications
+
 ## 3.1.7
 
 - Multifield text parameters can be copied to clipboard via the attached 'copy' buttons
