--- a/templates/deployment_view.html.twig
+++ b/templates/deployment_view.html.twig
@@ -183,7 +183,7 @@
 
         {% if can_manage %}
             <a class="ui primary button no-print" href="{{nav.entityPath('app_checklist_create',deployment)}}">
-                <i class="ui plus icon"></i>Add Checklist Task
+                <i class="ui plus icon"></i>Add Checklist Activity
             </a>
         {% endif %}
 
@@ -191,7 +191,7 @@
             <thead>
                 <tr>
                     <th class="ui collapsing">#</th>
-                    <th>Task</th>
+                    <th>Activity</th>
                     <th class="ui collapsing">Start Date/Time</th>
                     <th class="ui collapsing">End Date/Time</th>
                     <th class="ui collapsing">PIC</th>
