--- a/templates/whatsnew.html.twig
+++ b/templates/whatsnew.html.twig
@@ -13,6 +13,7 @@
 - Confirmation prompt will pop up upon leaving forms that have been modified
 - Password reset link now only resets the password when the user login using a new password (previously the password was already reset upon accessing the link)
 - Improved the "Login Provider" tab in the profile page to have actions on existing user authentications
+- Deployment requests now appear in the "Actions Needed" tab on the home page of approval users
 
 ## 3.1.7
 
