--- a/templates/whatsnew.html.twig
+++ b/templates/whatsnew.html.twig
@@ -8,6 +8,10 @@
 
 # What's New
 
+## 3.1.9
+
+Minor bugfixes
+
 ## 3.1.8
 
 - Confirmation prompt will pop up upon leaving forms that have been modified
