Minor bugfixes. Updated Dockerfile to PHP 8.1

--- a/src/Plugin/Taiga/configure.html.twig
+++ b/src/Plugin/Taiga/configure.html.twig
@@ -83,7 +83,7 @@
                     <div>
                         <div class="ui checkbox">
                             <input type="checkbox" value="1" name="delete_fresh_item_only" {% if core.options.delete_fresh_item_only %}checked="checked"{% endif %} />
-                            <label>... only if the user story is in 'Documentation' status and it has no activities nor attachments</label>
+                            <label>... only if the deployment item is in 'Documentation' status and it has no activities nor attachments</label>
                         </div>
                     </div>
                 </div>
